try to make validation